fixed font bugs, add q-icon font , add header component, add header details component , add footer component , add image after header component

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -69,3 +69,10 @@ $dir: ltr;
 @import 'layouts/_footer.scss';
 
 /* STATE - page of site*/
+@font-face {
+  font-family: "q-parts-icons";
+  font-weight: normal;
+  font-style: normal;
+  src: url("./icon/q-parts-icons.eot");
+  src: url("./icon/q-parts-icons.eot?#iefix") format("embedded-opentype"), url("./icon/q-parts-icons.woff") format("woff"), url("./icon/q-parts-icons.ttf") format("truetype"), url("./icon/q-parts-icons.svg#q-parts-icons") format("svg");
+}
