--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -6,3 +6,12 @@
   @include transition (all, 0.5s, ease)
 
 }
+
+.footer-custom-btn{
+  padding: 10px 15px;
+  background: $light-gray;
+  @extend .link-border-radius;
+  text-transform: uppercase;
+  @include transition (all, 0.5s, ease)
+
+}
