--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,4 +1,3 @@
-
 /*Direction */
 // Override default value for $dir in directional.scss
 $dir: ltr;
@@ -6,7 +5,7 @@ $dir: ltr;
 // Import helpers from directional.scss
 @import "base/_directional.scss";
 
-@import 'base/_variables.scss';
+@import "base/_variables.scss";
 
 // Import helpers from bootestrap
 @import "bootstrap/functions";
@@ -46,27 +45,28 @@ $dir: ltr;
 //@import "bootstrap/print";
 
 //select2-develop
-@import "select2-develop/_core.scss";
+@import "select2-develop/core";
 
 /* slick slider component*/
 
 @import "modules/_slick.scss";
 /* BASE - Base styles , variables, mixins, ect*/
-@import 'base/_mixins.scss';
-@import 'base/_normalize.scss';
-@import 'base/_base.scss';
+@import "base/_mixins.scss";
+@import "base/_normalize.scss";
+@import "base/_base.scss";
 
 /*MODULES  - Individual site components */
-@import 'modules/_typography.scss';
-@import 'modules/_blocks.scss';
-@import 'modules/_buttons.scss';
-@import 'modules/_components.scss';
-@import 'modules/_sections.scss';
+@import "modules/_typography.scss";
+@import "modules/_blocks.scss";
+@import "modules/_buttons.scss";
+@import "modules/_components.scss";
+@import "modules/_sections.scss";
 /* LAYOUTS - page layout styles */
 
-@import 'layouts/_nav.scss';
-@import 'layouts/_header.scss';
-@import 'layouts/_footer.scss';
+@import "layouts/_nav.scss";
+@import "layouts/_header.scss";
+@import "layouts/_footer.scss";
+@import "queries/media-queries";
 
 /* STATE - page of site*/
 @font-face {
@@ -74,5 +74,26 @@ $dir: ltr;
   font-weight: normal;
   font-style: normal;
   src: url("./icon/q-parts-icons.eot");
-  src: url("./icon/q-parts-icons.eot?#iefix") format("embedded-opentype"), url("./icon/q-parts-icons.woff") format("woff"), url("./icon/q-parts-icons.ttf") format("truetype"), url("./icon/q-parts-icons.svg#q-parts-icons") format("svg");
+  src: url("./icon/q-parts-icons.eot?#iefix") format("embedded-opentype"),
+    url("./icon/q-parts-icons.woff") format("woff"),
+    url("./icon/q-parts-icons.ttf") format("truetype"),
+    url("./icon/q-parts-icons.svg#q-parts-icons") format("svg");
 }
+
+/* Add Custom Style To select , header */
+.custom-select {
+  position: relative !important;
+  top: -9px !important;
+  width: 128px !important;
+  left: 2px !important;
+  
+  .css-10nd86i {
+    position: relative!important;
+    box-sizing: border-box!important;
+    top: -7px!important;
+    width: 128px !important;
+    right: 11px !important;
+    left: -12px!important;
+  }
+}
+
