--- a/scss/layouts/_manual-form.scss
+++ b/scss/layouts/_manual-form.scss
@@ -1,60 +1,83 @@
 .manual-form {
-    background: url(/img/hero-lg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center top;
-    min-height: 559px;
-    text-align: center;
-    color: $white;
-    padding-left: $padding-left;
-  
-    .manual-form__dropdown {
-      left: 1px;
-      @include boarder-right-radius(0, 20px);
+  background: url(/img/hero-lg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  min-height: 559px;
+  text-align: center;
+  color: $white;
+  padding-left: $padding-left;
+
+  .manual-form__dropdown {
+    left: 1px;
+    @include boarder-right-radius(0, 20px);
+
+    .select__control {
+      width: 90px;
+      .select__value-container {
+        width: 55px;
+      }
     }
-  
-    .manual-form-textbox {
-      @include boarder-left-radius;
-    }
-  
-    .manual-form__content {
+
+    .select-input {
       position: relative;
-      top: 161px;
-      bottom: 261px;
-      margin-right: inherit;
-  
-      h1 {
-        font-size: $title-font-size;
-      }
-      .row {
-        div {
-          background-color: $white;
-          color: $basic-black;
-          text-align: left;
-        }
-        input {
-          border-style: none;
-        }
-      }
-  
-      label {
-        position: relative;
-        top: 19px;
-        left: 32px;
-      }
-  
-      input {
-        position: relative;
-        top: 16px;
-      }
-    }
-    button {
-      width: 258px;
-      height: 85px;
-      left: 10px;
-      text-align: left;
-    }
-    p {
-      margin-bottom: 29px;
+      bottom: 9px;
     }
   }
+
+  .manual-form-textbox {
+    @include boarder-left-radius;
+  }
+
+  .manual-form__content {
+    position: relative;
+    top: 161px;
+    bottom: 261px;
+    margin-right: inherit;
+
+    h1 {
+      font-size: $title-font-size;
+    }
+    .manual-form__background {
+      background-color: $white;
+      color: $basic-black;
+      text-align: left;
+
+      input {
+        left: 18px;
+        border-style: none;
+        width: 364px;
+      }
+    }
+
+    label {
+      position: relative;
+      top: 19px;
+      left: 32px;
+    }
+
+    input {
+      position: relative;
+      top: 16px;
+    }
+  }
+  button {
+    width: 258px;
+    height: 85px;
+    left: 10px;
+    text-align: left;
+  }
+  p {
+    margin-bottom: 29px;
+  }
+
+  .seperator {
+    position: relative;
+    left: 10px;
+    height: 20px;
+  }
+
+  .manual-form__dropdown-input {
+    padding-left: 22px;
+  }
+}
