styled dropdown box, custom order section

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -7,6 +7,7 @@ $basic-gray: #37363d;
 $basic-black: #222222;
 $light-gray: #f7f7f7;
 $brand-color: #ed4036;
+$charcoal-grey: rgba(55, 54, 60, 0.6);
 //img
 $img-path: "/public/img";
 
