--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -79,7 +79,7 @@
 .icon-search:before {
   content: "\6c";
 }
-.icon-arrow-dwon:before {
+.icon-arrow-down:before {
   content: "\6f";
 }
 //select2
