--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,8 +14,9 @@ a:active {
   outline: 0;
 }
 
-h1 {
+h1, h3 {
   font-family: $title-font;
+  text-transform: uppercase;
 }
 
 button {
@@ -27,3 +28,50 @@ button {
     left: 10px;
   }
 }
+
+.red-line {
+  width: 157px;
+  height: 2px;
+  border-radius: 1px;
+  background-color: $brand-color;
+}
+
+.dotted-line {
+  width: 11px;
+  height: 1px;
+  border: solid 0.7px #ededed;
+  background-color: #ededed;
+}
+
+.request {
+  width: 73px;
+  height: 81px;
+}
+
+.check-price {
+  width: 113px;
+  height: 71px;
+}
+
+.add-to-cart {
+  width: 77px;
+  height: 77px;
+}
+
+.delivery-product {
+  width: 106px;
+  height: 88px;
+}
+
+.upload-img {
+  width: 26px;
+  height: 23px;
+}
+
+.ellipse {
+  width: 49px;
+  height: 49px;
+  box-shadow: 0px 18px 18px 0 rgba(0, 0, 0, 0.07);
+  background-color: #ffffff;
+}
+
