--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -133,3 +133,25 @@
   display: inline-block;
   @extend .align-middle;
 }
+
+.ellipse {
+  border-radius: 20px;
+  width: 49px;
+  height: 49px;
+  box-shadow: 0px 18px 18px 0 rgba(0, 0, 0, 0.07);
+  background-color: #ffffff;
+}
+
+.red-line {
+  width: 157px;
+  height: 2px;
+  border-radius: 1px;
+  background-color: $brand-color;
+}
+
+.dotted-line {
+  width: 11px;
+  height: 1px;
+  border: solid 0.7px #ededed;
+  background-color: #ededed;
+}
