--- a/scss/queries/_media-queries.scss
+++ b/scss/queries/_media-queries.scss
@@ -161,7 +161,10 @@
   }
   .manual-form {
     background: url(/img/cover-img-xs.jpg);
-    min-height: 531px;
+    min-height: 250px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
   }
 }
 /* Custom, iPhone Retina */
