--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -16,6 +16,7 @@ $border-radius-base: 0;
 
 //BAS FONT SIZE
 $bas-font-size: 16px;
+$button-font-size: 20px;
 $title-font-size: 55px;
 
 //container width
