finished the start now style

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -72,6 +72,7 @@ $dir: ltr;
 @import "layouts/_footer.scss";
 @import "layouts/manual-form";
 @import "layouts/home-details";
+@import "layouts/products";
 
 /* STATE - page of site*/
 @font-face {
