--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -1,11 +1,9 @@
-
 /*UNCTIONS*/
 
 @function calculateRem($size) {
   $remSize: $size / 16px;
   @return $remSize * 1rem;
 }
-
 
 /*MIXIN*/
 
@@ -15,17 +13,18 @@
 }
 //@include font
 
-@mixin font-face($font-family, $file-path, $weight: normal, $style: normal ) {
+@mixin font-face($font-family, $file-path, $weight: normal, $style: normal) {
   @font-face {
     font-family: $font-family;
     font-weight: $weight;
     font-style: $style;
 
     src: url('#{$file-path}/#{$font-family}.eot');
-    src: url('#{$file-path}/#{$font-family}.eot?#iefix')               format('embedded-opentype'),
-         url('#{$file-path}/#{$font-family}.woff')                     format('woff'),
-         url('#{$file-path}/#{$font-family}.ttf')                      format('truetype'),
-         url('#{$file-path}/#{$font-family}.svg##{$font-family}')      format('svg');
+    src: url('#{$file-path}/#{$font-family}.eot?#iefix')
+        format('embedded-opentype'),
+      url('#{$file-path}/#{$font-family}.woff') format('woff'),
+      url('#{$file-path}/#{$font-family}.ttf') format('truetype'),
+      url('#{$file-path}/#{$font-family}.svg##{$font-family}') format('svg');
   }
 }
 
@@ -39,28 +38,27 @@
   background-color: rgba($red, $green, $blue, $alpha);
 }
 @mixin text-color-alpha($red, $green, $blue, $alpha) {
-color: rgba($red, $green, $blue, $alpha);
+  color: rgba($red, $green, $blue, $alpha);
 }
 
 //box shadow
 @mixin box-shadow($top, $left, $blur, $color) {
-      -webkit-box-shadow:$top $left $blur $color ;
-      -moz-box-shadow:$top $left $blur $color;
-      box-shadow:$top $left $blur $color ;
+  -webkit-box-shadow: $top $left $blur $color;
+  -moz-box-shadow: $top $left $blur $color;
+  box-shadow: $top $left $blur $color;
 }
 
 //box shadow
 @mixin box-shadow-size($left, $top, $blur, $size, $color) {
-      -webkit-box-shadow:$left, $top, $blur, $size, $color ;
-      -moz-box-shadow:$left, $top, $blur, $size, $color;
-      box-shadow:$left, $top, $blur, $size, $color;
+  -webkit-box-shadow: $left, $top, $blur, $size, $color;
+  -moz-box-shadow: $left, $top, $blur, $size, $color;
+  box-shadow: $left, $top, $blur, $size, $color;
 }
 
-
 @mixin innerbox-shadow($top, $left, $blur, $color) {
-  -webkit-box-shadow:inset $top $left $blur $color;
-  -moz-box-shadow:inset $top $left $blur $color;
-  box-shadow:inset $top $left $blur $color;
+  -webkit-box-shadow: inset $top $left $blur $color;
+  -moz-box-shadow: inset $top $left $blur $color;
+  box-shadow: inset $top $left $blur $color;
 }
 
 // Opacity
@@ -74,27 +72,43 @@ color: rgba($red, $green, $blue, $alpha);
 
 //animate
 
-@mixin animat-delay($delay){
+@mixin animat-delay($delay) {
   -webkit-animation-delay: $delay; /* Chrome, Safari, Opera */
-    animation-delay: $delay;
+  animation-delay: $delay;
 }
 
-@mixin gradient-vertical($start-color: #555, $end-color: #333, $start-percent: 0%, $end-percent: 100%) {
-  background-image: -webkit-linear-gradient(top, $start-color $start-percent, $end-color $end-percent);  // Safari 5.1-6, Chrome 10+
-  background-image: -o-linear-gradient(top, $start-color $start-percent, $end-color $end-percent);  // Opera 12
-  background-image: linear-gradient(to bottom, $start-color $start-percent, $end-color $end-percent); // Standard, IE10, Firefox 16+, Opera 12.10+, Safari 7+, Chrome 26+
+@mixin gradient-vertical(
+  $start-color: #555,
+  $end-color: #333,
+  $start-percent: 0%,
+  $end-percent: 100%
+) {
+  background-image: -webkit-linear-gradient(
+    top,
+    $start-color $start-percent,
+    $end-color $end-percent
+  ); // Safari 5.1-6, Chrome 10+
+  background-image: -o-linear-gradient(
+    top,
+    $start-color $start-percent,
+    $end-color $end-percent
+  ); // Opera 12
+  background-image: linear-gradient(
+    to bottom,
+    $start-color $start-percent,
+    $end-color $end-percent
+  ); // Standard, IE10, Firefox 16+, Opera 12.10+, Safari 7+, Chrome 26+
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{ie-hex-str($start-color)}', endColorstr='#{ie-hex-str($end-color)}', GradientType=0); // IE9 and down
 }
 
-
 /* @include transition(all,2s,ease-out); */
 @mixin transition($what: all, $time: 0.2s, $how: ease-in-out) {
-    -webkit-transition: $what $time $how;
-    -moz-transition:    $what $time $how;
-    -ms-transition:     $what $time $how;
-    -o-transition:      $what $time $how;
-    transition:         $what $time $how;
+  -webkit-transition: $what $time $how;
+  -moz-transition: $what $time $how;
+  -ms-transition: $what $time $how;
+  -o-transition: $what $time $how;
+  transition: $what $time $how;
 }
 
 @mixin boarder-left-radius($top: 20px, $bottom: 20px) {
@@ -109,6 +123,30 @@ color: rgba($red, $green, $blue, $alpha);
 
 @mixin large-medium-screens {
   @media (min-width: 480px) {
+    @content;
+  }
+}
+
+@mixin x-small {
+  @media only screen and (max-width: 575.98px) {
+    @content;
+  }
+}
+
+@mixin small {
+  @media only screen and (max-width: 767.98px) {
+    @content;
+  }
+}
+
+@mixin medium {
+  @media only screen and (max-width: 991.98px) {
+    @content;
+  }
+}
+
+@mixin large {
+  @media only screen and (max-width: 1199.98px) {
     @content;
   }
 }
