--- a/scss/layouts/_manual-form.scss
+++ b/scss/layouts/_manual-form.scss
@@ -80,4 +80,8 @@
   .manual-form__dropdown-input {
     background-color: $white;
   }
+  .btn-primary {
+    padding-top: 31px;
+    padding-bottom: 31px;
+  }
 }
