--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -8,6 +8,7 @@ $basic-black: #222222;
 $light-gray: #f7f7f7;
 $brand-color: #ed4036;
 $charcoal-grey: rgba(55, 54, 60, 0.6);
+$gainsboro-color: #DCDCDC;
 //img
 $img-path: "/public/img";
 
@@ -18,6 +19,7 @@ $border-radius-base: 0;
 $bas-font-size: 16px;
 $button-font-size: 20px;
 $title-font-size: 55px;
+$down-arrow-font-size: 25px;
 
 //container width
 $max-container : 1170px;
