--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -9,6 +9,7 @@ $light-gray: #f7f7f7;
 $brand-color: #ed4036;
 $charcoal-grey: rgba(55, 54, 60, 0.6);
 $gainsboro-color: #DCDCDC;
+$basic-white: rgba(255, 255, 255, 0.8);
 //img
 $img-path: "/public/img";
 
