--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -4,6 +4,7 @@
   @extend .link-border-radius;
   text-transform: uppercase;
   @include transition(all, 0.5s, ease);
+  cursor: pointer;
 }
 
 .btn-primary {
