--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -13,6 +13,27 @@
   background: $brand-color;
   color: $white;
 }
+.btn-link {
+  @extend .btn;
+  color: $charcoal-grey;
+  border-style: none;
+  text-transform: capitalize;
+
+  &.selected {
+    color: $basic-black;
+    font-weight: 500;
+  }
+
+  &:focus,
+  &.focus {
+    border-color: transparent;
+    box-shadow: none;
+  }
+
+  &:hover{
+    color: $brand-color;
+  }
+}
 
 .footer-custom-btn {
   padding: 10px 15px;
