--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -140,13 +140,13 @@
 }
 
 @mixin medium {
-  @media only screen and (max-width: 991.98px) {
+  @media only screen and (min-width: 991.98px) {
     @content;
   }
 }
 
 @mixin large {
-  @media only screen and (max-width: 1199.98px) {
+  @media only screen and (min-width: 1199.98px) {
     @content;
   }
 }
