--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -10,6 +10,8 @@ $brand-color: #ed4036;
 $charcoal-grey: rgba(55, 54, 60, 0.6);
 $gainsboro-color: #DCDCDC;
 $basic-white: rgba(255, 255, 255, 0.8);
+$basic-dark-white: rgba(255, 255, 255, 0.5);
+$very-light-pink: rgba(235, 235, 235, 0.3);
 //img
 $img-path: "/public/img";
 
