minor css fixes

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -65,6 +65,7 @@ $dir: ltr;
 @import "modules/_components.scss";
 @import "modules/select";
 @import "modules/_sections.scss";
+@import "modules/_title.scss";
 /* LAYOUTS - page layout styles */
 
 @import "layouts/_nav.scss";
