--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -8,6 +8,8 @@ $basic-black: #222222;
 $light-gray: #f7f7f7;
 $brand-color: #ed4036;
 $charcoal-grey: rgba(55, 54, 60, 0.6);
+$dark-charcoal-grey : #37363c;
+$light-charcoal-grey: rgba(55, 54, 60, 0.7);
 $gainsboro-color: #DCDCDC;
 $basic-white: rgba(255, 255, 255, 0.8);
 $basic-dark-white: rgba(255, 255, 255, 0.5);
