finished the signin dialog. Just missing a minor thing from the design

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -56,7 +56,7 @@ $dir: ltr;
 @import "base/_base.scss";
 
 /* MEDIA QUERY */
-@import "queries/media-queries";
+// @import "queries/media-queries";
 
 /*MODULES  - Individual site components */
 @import "modules/_typography.scss";
@@ -66,6 +66,7 @@ $dir: ltr;
 @import "modules/select";
 @import "modules/_sections.scss";
 @import "modules/_title.scss";
+@import "modules/dialog";
 /* LAYOUTS - page layout styles */
 
 @import "layouts/_nav.scss";
@@ -74,6 +75,7 @@ $dir: ltr;
 @import "layouts/home-details";
 @import "layouts/products";
 @import "layouts/apps-link";
+@import "layouts/authentication/login";
 @import "layouts/_footer";
 
 /* STATE - page of site*/
