--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -138,7 +138,7 @@
   border-radius: 20px;
   width: 34px;
   height: 34px;
-  box-shadow: 0px 18px 18px 0 rgba(0, 0, 0, 0.07);
+  @extend .box-shadow;
   background-color: $white;
 }
 
@@ -156,9 +156,23 @@
   background-color: #ededed;
 }
 
+.solid-line {
+  display: inline-block;
+  width: 412px;
+  height: 1px;
+  background-color: #e2e2e2;
+}
+
 .rounded-rectangle {
   border-radius: 20px;
-  box-shadow: 0px 18px 18px 0 rgba(0, 0, 0, 0.07);
+  @extend .box-shadow;
+  background-color: $white;
+}
+
+.radio-button {
+  width: 20px;
+  height: 20px;
+  border-radius: 9px;
   background-color: $white;
 }
 
