--- a/scss/layouts/_home-details.scss
+++ b/scss/layouts/_home-details.scss
@@ -145,6 +145,9 @@
 
   div {
     position: relative;
+    @include boarder-left-radius(20px, 20px);
+    @include boarder-right-radius(0, 20px);
+    overflow: hidden;
   }
 
   button {
@@ -173,9 +176,9 @@
   }
 
   .vendor-img {
-    @include boarder-left-radius(20px, 20px);
-    @include boarder-right-radius(0, 20px);
-    width: 100%;
+    @include large {
+      width: 100%;
+    }
 
     @include x-small {
       background-image: url(/img/vendor-xs.jpg);
