--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -160,7 +160,7 @@
   display: inline-block;
   width: 412px;
   height: 1px;
-  background-color: #e2e2e2;
+  background-color: $very-light-grey;
 }
 
 .rounded-rectangle {
