--- a/scss/layouts/authentication/_login.scss
+++ b/scss/layouts/authentication/_login.scss
@@ -60,44 +60,7 @@
       }
     }
   }
-  #social-media {
-    > div:first-child {
-      position: relative;
-      margin-top: 35px;
-      height: 20px;
-      text-align: center;
-     
-      p {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background: $light-gray;
-        color: $lighter-grey;
-        line-height: 1.67;
-        padding-left: 12px;
-        padding-right: 12px;
-      }
-    }
-    > div:nth-child(2) {
-      display: flex;
-      justify-content: center;
-      flex-direction: row;
-      margin-top: 29px;
-    }
-    div {
-      margin-left: 7px;
-    }
-    .icon-facebook-logo {
-      @include font-size(32px);
-      color: $facebook-color;
-    }
-    .icon-twitter {
-      @include font-size(32px);
-      color: $twitter-color;
-    }
-  }
-  #sign-up {
+  #sign-up-link {
     margin-top: 32px;
     display: flex;
     justify-content: center;
