--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -18,6 +18,7 @@
   color: $charcoal-grey;
   border-style: none;
   text-transform: capitalize;
+  padding: 0;
 
   &.selected {
     color: $basic-black;
@@ -37,17 +38,20 @@
 
 .btn-facebook {
   @extend .btn-primary;
+  @extend .box-shadow;
   background: $white;
   border-radius: side-values(0 0 0 20px) !important;
 
 }
 .btn-google {
   @extend .btn-primary;
+  @extend .box-shadow;
   background: $white;
   border-radius: side-values(0 0 0 0) !important;
 }
 .btn-twitter {
   @extend .btn-primary;
+  @extend .box-shadow;
   background: $white;
   border-radius: side-values(0 0 20px 0) !important;
 }
