--- a/scss/app.scss
+++ b/scss/app.scss
@@ -68,6 +68,7 @@ $dir: ltr;
 @import "modules/_title.scss";
 @import "modules/dialog";
 @import "modules/social-media";
+@import "modules/renderField";
 /* LAYOUTS - page layout styles */
 
 @import "layouts/_nav.scss";
