--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -1,6 +1,7 @@
 #signup {
   padding-top: 75px;
   background: $light-gray;
+  text-align: $left;
 
   @include small {
     padding-top: 0;
@@ -25,7 +26,7 @@
   .select-input {
     label {
       @include font-size(16px);
-      padding-left: 13px;
+      padding-#{$left}: 13px;
     }
   }
   .form-control {
@@ -35,9 +36,9 @@
 
     input {
       @extend .rounded-rectangle;
-      @include boarder-right-radius(0, 20px);
+      border-radius: corner-values(20px 0 20px 20px) !important;
       height: 55px;
-      padding-left: 20px;
+      padding-#{$left}: 20px;
       width: 100%;
     }
     input::placeholder {
@@ -45,7 +46,7 @@
     }
     label {
       @include font-size(16px);
-      padding-left: 13px;
+      padding-#{$left}: 13px;
     }
   }
   .row {
@@ -54,25 +55,22 @@
 
   .signup-form__two-inputs {
     @extend .no-gutters;
-    .form-group {
-      // max-width: 259px;
-    }
     > div:nth-child(1) {
-      padding-right: 10px;
+      padding-#{$right}: 10px;
       input {
-        border-radius: side-values(20px 0 0 20px) !important;
+        border-radius: corner-values(20px 0 0 20px) !important;
       }
     }
     > div:nth-child(2) {
       input {
-        border-radius: side-values(0 0 20px 0) !important;
+        border-radius: corner-values(0 0 20px 0) !important;
       }
     }
   }
 
   #country-city {
     > .form-group:first-child {
-      margin-right: 10px;
+      margin-#{$right}: 10px;
     }
     .css-10nd86i {
       .select__control {
@@ -87,21 +85,21 @@
       }
       .select__value-container {
         padding: inherit;
-        margin-left: 20px;
+        margin-#{$left}: 20px;
       }
     }
     > div:nth-child(1) {
       .css-10nd86i {
         @extend .rounded-rectangle;
         height: 55px;
-        border-radius: side-values(20px 0 0 20px) !important;
+        border-radius: corner-values(20px 0 0 20px) !important;
       }
     }
     > div:nth-child(2) {
       .css-10nd86i {
         @extend .rounded-rectangle;
         height: 55px;
-        border-radius: side-values(0 0 20px 0) !important;
+        border-radius: corner-values(0 0 20px 0) !important;
       }
     }
   }
@@ -116,13 +114,13 @@
     button {
       height: 51px;
       text-transform: capitalize;
-      margin-left: auto;
+      margin-#{$left}: auto;
 
       @include small {
         width: 100%;
-        margin-left: 0;
+        margin-#{$left}: 0;
         margin-bottom: 64px;
-        text-align: right;
+        text-align: $right;
       }
     }
 
@@ -152,7 +150,7 @@
     > span:nth-child(2) {
       position: relative;
       top: 5px;
-      padding-left: 4px;
+      padding-#{$left}: 4px;
       @include font-size(18px);
     }
     .btn-link {
@@ -188,28 +186,29 @@
 
   .ReactPasswordStrength {
     @extend .rounded-rectangle;
-    @include boarder-right-radius(0, 20px);
+    border-radius: corner-values(20px 0 20px 20px) !important;
     box-shadow: none;
-  
+
     .ReactPasswordStrength-input {
       height: auto;
       @include font-size(16px);
     }
-  
+
     .ReactPasswordStrength-strength-bar {
       position: absolute;
       height: 4px;
       top: 97px;
-      right: initial;
+      #{$right}: initial;
     }
-  
+
     .ReactPasswordStrength-strength-desc {
       width: auto;
       top: 62px;
+      #{$right}: 0;
+      #{$left}: unset;
     }
   }
   .password-strength {
-
     > label {
       margin-top: 20px;
     }
